<resources>
    <string name="app_name">My Application</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_background">login background</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="region">Region</string>
    <string name="account_info">Account Info</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="flat">Flat</string>
    <string name="floor">Floor</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_order">My Order</string>
    <string name="make_order">Make Order</string>
    <string name="hole_number">Hole number</string>
    <string name="rooms_number">Rooms number</string>
    <string name="kitchen_number">kitchen number</string>
    <string name="bathroom">Bathroom</string>
    <string name="scheme_image">Scheme image</string>
    <string name="hale_1">Hale 1</string>
    <string name="measure">Measure</string>
    <string name="material">Material</string>
    <string name="style_of_furniture">Style of furniture</string>
    <string name="pattern">Pattern</string>
    <string name="brand">Brand</string>
    <string name="wall_color">Wall Color</string>
    <string name="floor_color">Floor Color</string>
    <string name="furniture_color">Furniture Color</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="room_1">Room 1</string>
    <string name="room_2">Room 2</string>
    <string name="room_3">Room 3</string>
    <string name="room_4">Room 4</string>
    <string name="room_5">Room 5</string>
    <string name="bathroom_2">Bathroom 2</string>
    <string name="bathroom_1">Bathroom 1</string>
    <string name="bathroom_3">Bathroom 3</string>
    <string name="kitchen">Kitchen</string>
    <string name="hale_2">Hale 2</string>
    <string name="hale_3">Hale 3</string>
    <string name="check">Check</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="home_decoration">Home Decoration</string>
</resources>
