<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    style="@style/loginParent">

    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="@string/login_background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">


                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="App Snipp"
                    android:layout_marginTop="40dp"/>





                <com.google.android.material.card.MaterialCardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">



                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">

                        <TextView
                            style="@style/headerTextPrimary"
                            android:text="@string/login"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                        <!-- Email edit text -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_margin="3dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeColor="@color/primaryTextColor"
                            app:hintTextColor="@color/primaryTextColor"
                            android:id="@+id/login_email_field">
                            <EditText
                                android:textCursorDrawable="@color/primaryTextColor"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/email"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:importantForAutofill="no"
                                android:id="@+id/login_email_edit"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Password edit text -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_margin="3dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:boxStrokeColor="@color/primaryTextColor"
                            app:hintTextColor="@color/primaryTextColor"
                            android:id="@+id/login_password_field">

                            <EditText
                                android:textCursorDrawable="@color/primaryTextColor"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:hint="@string/password"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent"
                                android:id="@+id/login_password"
                                android:importantForAutofill="no" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            style="@style/viewParent"
                            android:text="@string/forgot_password"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/newsMoreTextSize"
                            android:layout_gravity="end"
                            android:layout_marginTop="10dp"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/cirLoginButton"
                            style="@style/loginButton"
                            android:text="@string/login"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="login"/>

                        <TextView
                            android:id="@+id/singup"
                            style="@style/parent"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/login_signup_hint"
                            android:onClick="signup"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            tools:ignore="OnClick" />


                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>








            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</RelativeLayout>