<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order_Fragment">

    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="@string/login_background" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">


                <TextView
                    style="@style/headerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/make_order"
                    android:gravity="center"
                    android:layout_marginTop="55dp"/>




                <com.google.android.material.card.MaterialCardView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:cardCornerRadius="8dp"
                    android:layout_gravity="center"
                    android:background="@color/whiteCardColor"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:src="@drawable/person"
                            android:layout_margin="8dp"/>


                        <!-- Hole menu select-->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_weight="1"
                            android:layout_margin="3dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:boxStrokeColor="@color/primaryTextColor"
                            app:hintTextColor="@color/primaryTextColor"
                            android:hint="@string/hole_number">

                            <AutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            app:cardCornerRadius="5dp"
                            app:strokeColor="#000"
                            app:strokeWidth="1dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="6dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Hole 1"
                                    android:textColor="#000"
                                    android:textStyle="bold"
                                    android:textSize="15sp"
                                    android:layout_margin="3dp"/>


                                <!-- measurement edit text -->
                                <com.google.android.material.textfield.TextInputLayout
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                    android:layout_margin="3dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:boxStrokeColor="@color/primaryTextColor"
                                    app:hintTextColor="@color/primaryTextColor"
                                    tools:ignore="TooDeepLayout">
                                    <EditText
                                        android:textCursorDrawable="@color/primaryTextColor"
                                        android:inputType="number"
                                        android:maxLines="1"
                                        android:hint="Measure"
                                        android:layout_height="wrap_content"
                                        android:layout_width="match_parent"
                                        android:importantForAutofill="no" />
                                </com.google.android.material.textfield.TextInputLayout>


                                <!-- type of material menu select-->
                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_weight="1"
                                    android:layout_margin="3dp"
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    app:boxStrokeColor="@color/primaryTextColor"
                                    app:hintTextColor="@color/primaryTextColor"
                                    android:hint="Type of material">

                                    <AutoCompleteTextView
                                        android:id="@+id/type_of_material_1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        tools:ignore="LabelFor"/>

                                </com.google.android.material.textfield.TextInputLayout>

                                <!-- style of furniture menu select -->
                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_weight="1"
                                    android:layout_margin="3dp"
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    app:boxStrokeColor="@color/primaryTextColor"
                                    app:hintTextColor="@color/primaryTextColor"
                                    android:hint="Style of furniture">

                                    <AutoCompleteTextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"/>

                                </com.google.android.material.textfield.TextInputLayout>

                                <!-- Pattern menu select-->
                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_weight="1"
                                    android:layout_margin="3dp"
                                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    app:boxStrokeColor="@color/primaryTextColor"
                                    app:hintTextColor="@color/primaryTextColor"
                                    android:hint="Pattern">

                                    <AutoCompleteTextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"/>

                                </com.google.android.material.textfield.TextInputLayout>

                                <!-- wall color -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">


                                    <com.google.android.material.button.MaterialButton
                                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Wall Color"
                                        android:layout_marginTop="15dp"
                                        android:layout_marginStart="6dp"/>

                                    <View
                                        android:layout_width="0dp"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        />

                                    <ImageView
                                        android:layout_width="65dp"
                                        android:layout_height="65dp"
                                        android:gravity="right"
                                        tools:ignore="RtlHardcoded"
                                        android:background="@color/colorPrimary"
                                        android:layout_margin="6dp"/>

                                </LinearLayout>

                                <!-- Floor color -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">


                                    <com.google.android.material.button.MaterialButton
                                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Floor Color"
                                        android:layout_marginTop="15dp"
                                        android:layout_marginStart="6dp"/>

                                    <View
                                        android:layout_width="0dp"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        />

                                    <ImageView
                                        android:layout_width="65dp"
                                        android:layout_height="65dp"
                                        android:gravity="right"
                                        tools:ignore="RtlHardcoded"
                                        android:background="@color/colorPrimary"
                                        android:layout_margin="6dp"/>

                                </LinearLayout>

                                <!-- Furniture color-->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">


                                    <com.google.android.material.button.MaterialButton
                                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Furniture Color"
                                        android:layout_marginTop="15dp"
                                        android:layout_marginStart="6dp"/>

                                    <View
                                        android:layout_width="0dp"
                                        android:layout_height="0dp"
                                        android:layout_weight="1"
                                        />

                                    <ImageView
                                        android:layout_width="65dp"
                                        android:layout_height="65dp"
                                        android:gravity="right"
                                        tools:ignore="RtlHardcoded"
                                        android:background="@color/colorPrimary"
                                        android:layout_margin="6dp"/>

                                </LinearLayout>


                            </LinearLayout>





                        </com.google.android.material.card.MaterialCardView>





                    </LinearLayout>











                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>